# conductor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONDUCATOR_IMPLEMENTATION_SPEC.md  LICENSE  Makefile  PROJECT_AGENT_INFRA.md  PROJECT_PLUGMEM_PLAN.md  PROPOSAL.md  README.md  ROADMAP.md  TESTING.md  pyproject.toml  test_chat.py
backend/: CLAUDE.md  README.md  pytest.ini  requirements.txt
backend/app/: config.py  main.py  ngrok_service.py
backend/tests/: conftest.py  parity_helpers.py  test_agent_loop.py  test_agent_loop_integration.py  test_ai_provider.py  test_audit.py  test_auth.py  test_auto_apply_policy.py  test_bedrock_tool_repair.py  test_brain.py  test_browser_tools.py  test_budget_controller.py  test_chat.py  test_chat_persistence.py  test_code_review.py  test_code_search.py  test_code_tools.py  test_compressed_tools.py  test_config_new.py  test_config_paths.py  test_context.py  test_db.py  test_detect_patterns.py  test_dispatch_subagent.py  test_dispatch_sweep.py  test_dispatch_verify.py  test_domain_brain.py  test_embedding_provider.py  test_embeddings.py  test_evidence.py  test_evidence_normalization.py  test_file_edit_tools.py  test_git_workspace.py  test_interactive.py  test_jira_router.py  test_jira_service.py  test_jira_tools.py  test_jira_webhook.py  test_langextract.py  test_litellm_provider.py  (+29 more)
config/: CLAUDE.md  brain.yaml  conductor.secrets.yaml  conductor.secrets.yaml.example  conductor.settings.yaml  conductor.settings.yaml.example  conductor.yaml.example  jira_project_guide.yaml
config/agent_factory/: _README.md  concurrency.md  correctness.md  performance.md  reliability.md  security.md  test_coverage.md
config/agents/: arbitrator.md  classifier.md  concurrency.md  correctness.md  reliability.md  (+19 more)
contracts/: tool_contracts.json
database/: liquibase.properties
docker/: docker-compose.app.yaml  docker-compose.ecs.yaml  docker-compose.langfuse.yaml  ecs.env.example  init-db.sql
docs/: ARCHITECTURE.md  GUIDE.md  GUIDE_ADDENDUM.md  JIRA_WEBHOOK_SETUP.md  PR_BRAIN_OPTIMIZATION.md  PR_BRAIN_V2_PLAN.md  STORAGE.md  ULTRAREVIEW_EXPLORATION.md  guide_eng.md
eval/: CLAUDE.md  README.md  judge.py  report.py  repos.yaml  run.py  runner.py  scorer.py
extension/: .eslintrc.json  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
reference/: CLAUDE.md
scripts/: generate_tool_contracts.py  init-cloud-db.sh
shared/: changeset.schema.json
(+363 files in other folders)
