[project]
name = "conductor"
requires-python = ">=3.12"

# ---------------------------------------------------------------------------
# Ruff — linter + import sorter (replaces flake8, isort, pyflakes, pycodestyle)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by black
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "B905",   # zip without strict= — too noisy for existing code
    "SIM108", # use ternary operator — readability preference
    "RUF012", # mutable class variable — too strict for dataclasses
    "UP006",  # use list instead of List — cosmetic, defer to a separate PR
    "UP007",  # use X | Y for union types — keep Optional[] for clarity
    "UP035",  # deprecated typing imports — cosmetic, defer to a separate PR
    "UP045",  # Optional[X] → X | None — keep Optional[] for clarity
    "RUF001", # ambiguous unicode — en-dashes in regexes are intentional
    "RUF002", # ambiguous unicode in docstrings — Chinese text is intentional
    "RUF003", # ambiguous unicode in comments — Chinese text is intentional
    "RUF005", # collection-literal-concatenation — [*a, *b] vs a + b preference
    "RUF013", # implicit-optional — same as UP007/UP045 family
    "UP042",  # replace-str-enum — StrEnum migration is a separate effort
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["B011", "SIM300", "E402", "E702"]  # assert False, yoda conditions, conftest stubs, semicolon drain patterns
"backend/app/code_tools/tools.py" = ["B028"]  # stacklevel in warnings — legacy code
"backend/app/chat/router.py" = ["E402"]  # logger before imports (intentional pattern)

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py312"]
line-length = 120
